# algo-visualizer

./: .gitignore  .prettierrc  README.md  biome.json  components.json  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: nextjs.yml
rust/: Cargo.toml
rust/src/: lib.rs  types.rs  utils.rs
rust/src/algorithms/: bfs.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Board.tsx  Header.tsx  NavMenu.tsx  board.tsx  header.tsx  nav-menu.tsx
src/components/atoms/: box.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  icons.tsx  menubar.tsx  slider.tsx
src/components/nav-menu/: index.tsx  run-menu.tsx  speed-menu.tsx  theme-menu.tsx
src/components/ui/: box.tsx  button.tsx  dropdown-menu.tsx  icons.tsx  menubar.tsx  slider.tsx
src/lib/: constants.tsx  context.tsx  core.tsx  coreContext.tsx  generator.tsx  mouseContext.tsx  runner.tsx  wasm-loader.ts
src/lib/algorithms/: a-star.ts  aStar.ts  bfs-wasm.ts  bfs.ts  dfs.ts  dijkstra.ts  maze.ts
src/lib/generators/: fresh.ts  labyrinth.ts  outerWall.ts  recursiveDivision.ts  spiced.ts  starPattern.ts
src/lib/helpers/: exe.ts  keyPress.ts  priorityQueue.ts  storage.ts  ui.ts
src/lib/maze/: maze.tsx
src/lib/utils/: helpers.ts  key-shortcuts.ts  key-shortcuts.tsx  local.ts  reset.ts  session.ts  storage.ts
src/styles/: globals.css
src/types/: global.d.ts
